# pdfEditor

./: .gitignore  ADR.md  AGENT.md  AGENT.md_—_Template-f30e2520-089f-57d9-9b77-ee9cdf7a9dc5.md  AGENTS.md  AGENT_FLOW.md  BRIEF.md  CHANGELOG.md  KNOWN_ISSUES.md  MIGRAZIONE_NEON.md  REFLECTIONS.md  architecture.mmd  index.html  landing-bozza.html  render.yaml
backend/: .env.example  alembic.ini  cli.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 01fd6e2d14bc_add_bug_reports_table.py  28643a7be8ae_add_reset_token_and_reset_token_expires_.py  38a24e3207a2_add_google_id_to_user.py  3fb479fca6ec_add_pdf_documents_table.py  450f3b0491f0_add_user_id_to_pdf_documents.py  5010129f2dca_add_users_table.py  5b4200ca661f_add_license_tier_source_to_user.py  5eec22a141a3_add_platform_app_version_os_info_to_bug_.py  6b1f5a3e8c9d_add_report_count_to_bug_reports.py  (+2 more)
backend/app/: main.py
backend/scripts/: seed_users_from_sqlite.py
backend/tests/: conftest.py  test_admin_send_reset.py  test_auth.py  test_bug_report.py  test_config.py  test_convert.py  test_csrf.py  test_csrf_validation.py  test_database.py  test_edge_cases.py  test_email_service.py  test_google_oauth.py  test_health.py  test_license.py  test_license_enforcement.py  test_main.py  test_merge_split.py  test_metadata.py  test_migration.py  test_models.py  test_protect.py  test_reorder.py  test_repositories.py  test_s3_storage.py  test_security.py  test_storage.py  test_text.py  test_undo_redo.py  test_unlock.py  test_upload.py  test_validation_errors.py
(+308 files in other folders)
